--- a/did-core/terms.html
+++ b/did-core/terms.html
@@ -12,7 +12,7 @@
 이러한 타입의 <a>분산원장</a>이 <a href="https://en.wikipedia.org/wiki/Bitcoin">비트코인</a>에 의해 처음 소개되었기 때문에 <em>블록체인</em> 이라는 단어는 가끔 구체적으로 비트코인 원장을 의미하기도 한다.
   </dd>
 
-  <dt><dfn data-lt="decentralized identifiers|DID|DIDs|탈중앙 ID|탈중앙 식별자들">탈중앙 식별자</dfn> (decentralized identifier, DID)</dt>
+  <dt><dfn data-lt="decentralized identifiers|DID|DIDs|DID들|탈중앙 ID|탈중앙 식별자들|탈중앙화 식별자">탈중앙 식별자</dfn> (decentralized identifier, DID)</dt>
 
   <dd>
 <a>분산원장기술</a>(DLT)이나 다른 형태의 분산 네트워크에 등록되었기 때문에 중앙화된 등록기관이 필요하지 않은 전역적으로 고유한 식별자이다. 
@@ -151,7 +151,7 @@ since a <a>DID subject</a> is not always an individual person.
 JSON 포인터는 [[RFC6901]]에 정의된 JavaScript Object Notation (JSON) 문서에서 특정 값을 식별하기위한 문자열 구문을 정의한다.
   </dd>
 
-  <dt><dfn data-lt="public key description">공개키 설명</dfn> (public key description)</dt>
+  <dt><dfn data-lt="public key description|공개키 정보">공개키 설명</dfn> (public key description)</dt>
 
   <dd>
 <a>DID 문서</a> 안에 공개키나 인증키를 사용하기 위한 모든 메타데이터를 담은 JSON 객체이다.
@@ -171,7 +171,7 @@ JSON 포인터는 [[RFC6901]]에 정의된 JavaScript Object Notation (JSON) 문
     [[RFC3986]]에 정의되어 있는 식별자
   </dd>
 
-  <dt><dfn data-lt="UUID|UUIDs">Universally Unique Identifier</dfn> (UUID)</dt>
+  <dt><dfn data-lt="Universally Unique Identifier|UUID|UUIDs">범용고유식별자</dfn> (Universally Unique Identifier, UUID)</dt>
 
   <dd>
     [[RFC4122]]에 정의되어 있는 식별자
