Modified the ID tag

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2192,7 +2192,7 @@ Example:
 
   </section>
 
-  <section class="informative">
+  <section class="informative" id="security-considerations">
     <h1>
       보안 고려사항 (Security Considerations)
     </h1>
@@ -2213,7 +2213,7 @@ Example:
       이로 인하여 <a>DID</a> 아키텍처와 분산 ID를 가능하게 한다.
     </p>
 
-    <section>
+    <section id="requirements-of-did-method-specifications">
       <h2>
         DID 메소드 사양의 요구 사항
       </h2>
@@ -2304,7 +2304,7 @@ Example:
       </ul>
     </section>
 
-    <section>
+    <section id="choosing-did-resolvers">
       <h2>
         DID 리졸버 선택
       </h2>
