--- a/did-core/index.html
+++ b/did-core/index.html
@@ -1679,7 +1679,7 @@ Example:
         <a>서비스 엔드포인트</a>에 대한 추가 보안 고려 사항은
         <a href="#did-method-schemes"></a> 및 <a href="#authentication"></a>을 참조
       </p>
-      </sectionㅑㅇ>
+      </section>
 
       <section id="created">
         <h2>
