--- a/did-core/index.html
+++ b/did-core/index.html
@@ -147,25 +147,26 @@
 <body>
   <div class="advisement" style="font-size:small">
     <p>
-      이 문서는 <a href="https://techhtml.github.io/html-media-capture/">W3C Decentralized Identifiers (DIDs) v1.0</a>의 한국어
+      이 문서는 <a href="https://www.w3.org/TR/did-core/">W3C Decentralized Identifiers (DIDs) v1.0</a>의 한국어
       번역본입니다.
     </p>
     <p>
-      이 문서에 오역 및 오타를 포함할 수 있습니다. <b>영어 원문만이 공식적이고 규범적인 효력을 가지고 있습니다.</b>
+      이 문서에 오역 및 오타를 포함할 수 있습니다. <b>영어 원문만이 공식적이고 규범적인 효력을 가지고 있습니다.</b><br/>
+      문의나 개선사항은 <a href="https://github.com/ssimeetupkorea/ssimeetupkorea.github.io">깃헙 링크</a>나 <a href="mailto:jshim10@illinois.edu">jshim10@illinois.edu</a>로 연락주시기 바랍니다.
     </p>
 
     <p>
       번역일: 2020-01-01<br />
     </p>
     <dt>번역자 <span style="font-weight: 500;">(가나다순)</span>: </dt>
-    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (LG CNS)</dd>
-    <dd><a href="mailto:example@gmail.com" ]>안형철</a></dd>
+    <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (<a href="https://lgcns.co.kr">LG CNS</a>)</dd>
+    <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
     <dd><a href="mailto:example@gmail.com" ]>오효근</a></dd>
-    <dd><a href="mailto:example@gmail.com" ]>유민호</a></dd>
+    <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co., Ltd.</a>)</dd>
     <dd><a href="mailto:example@gmail.com" ]>유수웅</a></dd>
     <dd><a href="mailto:example@gmail.com" ]>윤희태</a></dd>
     <dd><a href="mailto:example@gmail.com" ]>임도형</a></dd>
-    <dd><a href="mailto:example@gmail.com" ]>현수영</a></dd>
+    <dd><a href="mailto:hyunsy822@gmail.com" ]>현수영</a></dd>
   </div>
   <section id='abstract'>
     <p>
