--- a/did-core/index.html
+++ b/did-core/index.html
@@ -164,7 +164,7 @@
     <dd><a href="mailto:example@gmail.com" ]>오효근</a></dd>
     <dd><a href="https://www.linkedin.com/in/minho-yoo-1b968837/" ]>유민호</a> (<a href="https://iotrust.kr/">IoTrust Co., Ltd.</a>)</dd>
     <dd><a href="mailto:example@gmail.com" ]>유수웅</a></dd>
-    <dd><a href="mailto:example@gmail.com" ]>윤희태</a></dd>
+    <dd><a href="mailto:example@gmail.com" ]>윤희태</a> (<a href="https://http://blockcrafters.com/">Block Crafters Co., Ltd.</a>)</dd>
     <dd><a href="mailto:example@gmail.com" ]>임도형</a></dd>
     <dd><a href="mailto:hyunsy822@gmail.com" ]>현수영</a></dd>
   </div>
