번역자 bold 없애기

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -158,7 +158,7 @@
     <p>
       번역일: 2020-01-01<br />
     </p>
-    <dt>번역자 <span style="font-weight: 500;">(가나다순)</span>: </dt>
+    <dt><span style="font-weight: 500;">번역자 (가나다순)</span>: </dt>
     <dd><a href="mailto:jshim10@illinois.edu" ]>심재훈</a> (<a href="https://lgcns.co.kr">LG CNS</a>)</dd>
     <dd><a href="mailto:anh1026@kaist.ac.kr" ]>안형철</a></dd>
     <dd><a href="mailto:example@gmail.com" ]>오효근</a></dd>
