--- a/did-core/index.html
+++ b/did-core/index.html
@@ -1719,8 +1719,8 @@ URL이 참조하고 있는 곳을 찾아서, 그 URL과 연관된 <code>publicKe
         </ol>
 
         <p>
-          이 증명은 <a>DID</a>와 <a>DID 문서</a>간의 연관성(binding) 대한 증명이 아니다 (섹션 9.3 신원의 바인딩 참조(<a
-            href="#binding-of-identity"></a>)).
+          이 증명은 <a>DID</a>와 <a>DID 문서</a>간의 연관성(binding) 대한 증명이 아니다 (섹션 9.3 <a
+          href="#binding-of-identity">신원의 바인딩</a> 참조).
         </p>
 
         <p>
