No corresponding href

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2340,7 +2340,7 @@ DID와 DID 문서에 대한 컨트롤 증명하기
         </h3>
 
         <p>
-<a>DID 문서</a>의 공개키에 대응하는 <a>개인키의 증명</a>에는 두가지 방법이 있다: 정적 그리고 동적. 
+<a>DID 문서</a>의 공개키에 대응하는 개인키의 증명에는 두가지 방법이 있다: 정적 그리고 동적. 
         </p>
 
         <p>
