입니다 to 이다

--- a/did-core/index.html
+++ b/did-core/index.html
@@ -148,7 +148,7 @@
   <div class="advisement" style="font-size:small">
     <p>
       이 문서는 <a href="https://www.w3.org/TR/did-core/">W3C Decentralized Identifiers (DIDs) v1.0</a>의 한국어
-      번역본입니다.
+      번역본이다.
     </p>
     <p>
       이 문서에 오역 및 오타를 포함할 수 있습니다. <b>영어 원문만이 공식적이고 규범적인 효력을 가지고 있습니다.</b><br/>
@@ -320,7 +320,7 @@
       </h2>
 
       <p>
-        <a>DID</a>는 3부분으로 구성된 간단한 문자열입니다.:
+        <a>DID</a>는 3부분으로 구성된 간단한 문자열이다:
       </p>
       <ul>
         <li>
