--- a/did-core/index.html
+++ b/did-core/index.html
@@ -148,11 +148,12 @@
   <div class="advisement" style="font-size:small">
     <p>
       이 문서는 <a href="https://www.w3.org/TR/did-core/">W3C Decentralized Identifiers (DIDs) v1.0</a>의 한국어
-      번역본이다.
+      번역본입니다.
     </p>
     <p>
       이 문서에 오역 및 오타를 포함할 수 있습니다. <b>영어 원문만이 공식적이고 규범적인 효력을 가지고 있습니다.</b><br/>
-      문의나 개선사항은 <a href="https://github.com/ssimeetupkorea/ssimeetupkorea.github.io">깃헙 링크</a>나 <a href="mailto:jshim10@illinois.edu">jshim10@illinois.edu</a>로 연락주시기 바랍니다.
+      문의나 개선사항은 <a href="https://github.com/ssimeetupkorea/ssimeetupkorea.github.io">깃헙 링크</a>나 <a href="mailto:jshim10@illinois.edu">jshim10@illinois.edu</a>로 연락주시기 바랍니다.<br/>
+      * Issue는 현재 did-core에서 직접 등록된 문제들이기 때문에 번역하지 않았습니다.
     </p>
 
     <p>
