--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2468,9 +2468,9 @@ DID 문서 변화 알림
       </p>
     </section>
 
-    <section>
+    <section id="the-role-of-human-friendly-identifiers">
       <h2>
-        The Role of Human-Friendly Identifiers
+        인간 친화적 식별자의 역할
       </h2>
 
       <p>
@@ -2506,9 +2506,9 @@ DID 문서 변화 알림
           </p>
     </section>
 
-    <section>
+    <section id="immutability">
       <h2>
-        Immutability
+        불변성
       </h2>
 
       <p>
