--- a/did-core/index.html
+++ b/did-core/index.html
@@ -2494,19 +2494,15 @@ DID 문서 변화 알림
       </p>
 
       <p>
-        Solutions to this problem (and there are many) should be defined in separate
-        specifications that reference this specification. It is strongly recommended
-        that such specifications carefully consider the:
+        이 문제에 대한 해결책들은 여러가지 사양들 별로 별도의 정의가 필요하다. 정의시 다음과 같은 사양들을 신중하게 고려하는 것 이 좋다:
       </p>
 
       <ul>
         <li>
-          Numerous security attacks based on deceiving users about the true human-friendly
-          identifier for a target entity.
+          대상 엔터티에 대한 사용자 친화적 식별자에 대해 믿을 수 없는 사용자들의 수많은 보안 공격
         </li>
         <li>
-          Privacy consequences of using human-friendly identifiers that are inherently
-          correlatable, especially if they are globally unique.
+          본질적으로 연관 될 수 있는 사용자 친화적 식별자를 사용하는 경우의 개인 정보 보안, 특히 특정 정보 보안이 전 세계적으로 고유 한 정보 보안일 경우
         </li>
         <ul>
 
